--- a/Meditator/IntervalCell.xib
+++ b/Meditator/IntervalCell.xib
@@ -58,7 +58,7 @@
                         </constraints>
                         <state key="normal" title="4"/>
                     </button>
-                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aOh-b0-dv4">
+                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aOh-b0-dv4" customClass="RestrictedTouchPickerView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <constraints>
