--- a/Meditator/StartCell.xib
+++ b/Meditator/StartCell.xib
@@ -7,14 +7,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="StartCell" id="KGk-i7-Jjw" customClass="StartCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="91"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5vf-ZA-nLn">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" title="Start timer">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -24,8 +24,8 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="5vf-ZA-nLn" secondAttribute="trailing" id="03V-Op-ZAJ"/>
                     <constraint firstItem="5vf-ZA-nLn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="9mB-me-HiB"/>
-                    <constraint firstItem="5vf-ZA-nLn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Hmq-nR-6cS"/>
-                    <constraint firstAttribute="bottom" secondItem="5vf-ZA-nLn" secondAttribute="bottom" id="zdG-cv-F4f"/>
+                    <constraint firstItem="5vf-ZA-nLn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="Hmq-nR-6cS"/>
+                    <constraint firstAttribute="bottom" secondItem="5vf-ZA-nLn" secondAttribute="bottom" constant="20" symbolic="YES" id="zdG-cv-F4f"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
