--- a/Meditator/StartCell.xib
+++ b/Meditator/StartCell.xib
@@ -14,7 +14,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5vf-ZA-nLn">
-                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
+                        <rect key="frame" x="20" y="20" width="280" height="50"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" title="Start timer">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -22,8 +22,8 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="5vf-ZA-nLn" secondAttribute="trailing" id="03V-Op-ZAJ"/>
-                    <constraint firstItem="5vf-ZA-nLn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="9mB-me-HiB"/>
+                    <constraint firstAttribute="trailing" secondItem="5vf-ZA-nLn" secondAttribute="trailing" constant="20" symbolic="YES" id="03V-Op-ZAJ"/>
+                    <constraint firstItem="5vf-ZA-nLn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" symbolic="YES" id="9mB-me-HiB"/>
                     <constraint firstItem="5vf-ZA-nLn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" symbolic="YES" id="Hmq-nR-6cS"/>
                     <constraint firstAttribute="bottom" secondItem="5vf-ZA-nLn" secondAttribute="bottom" constant="20" symbolic="YES" id="zdG-cv-F4f"/>
                 </constraints>
