--- a/Meditator/AppDetailsViewController.xib
+++ b/Meditator/AppDetailsViewController.xib
@@ -44,6 +44,9 @@
                             <state key="normal" title="Open in iTunes">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
+                            <connections>
+                                <action selector="openStore:" destination="-1" eventType="touchUpInside" id="ph4-BY-Xdg"/>
+                            </connections>
                         </button>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HZq-6T-FPA">
                             <rect key="frame" x="88" y="20" width="212" height="21"/>
