--- a/Meditator/Base.lproj/Main_iPhone.storyboard
+++ b/Meditator/Base.lproj/Main_iPhone.storyboard
@@ -33,7 +33,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="iWP-zu-xFA" kind="relationship" relationship="rootViewController" id="bRM-oC-l2q"/>
+                        <segue destination="Bwz-eK-EW0" kind="relationship" relationship="rootViewController" id="v6S-2R-XSG"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cMh-D4-kjA" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -41,23 +41,58 @@
             <point key="canvasLocation" x="-493" y="-1037"/>
         </scene>
         <!--Instructions View Controller-->
-        <scene sceneID="wP1-N0-8FJ">
+        <scene sceneID="6oX-LH-4nx">
             <objects>
-                <viewController id="iWP-zu-xFA" customClass="InstructionsViewController" sceneMemberID="viewController">
-                    <textView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" id="aGe-Q4-Vkg">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                    </textView>
-                    <navigationItem key="navigationItem" id="ecu-Qu-ojm"/>
+                <viewController id="Bwz-eK-EW0" customClass="InstructionsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WDm-I2-cPR"/>
+                        <viewControllerLayoutGuide type="bottom" id="ntc-b2-QXN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="4Ax-ys-bep">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q7N-qg-M1R">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eYR-B4-SkP">
+                                        <rect key="frame" x="20" y="20" width="280" height="168"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="168" id="PZp-Cf-rVf"/>
+                                        </constraints>
+                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="eYR-B4-SkP" secondAttribute="bottom" constant="20" symbolic="YES" id="1Bi-c5-dYk"/>
+                                    <constraint firstItem="eYR-B4-SkP" firstAttribute="leading" secondItem="Q7N-qg-M1R" secondAttribute="leading" constant="20" symbolic="YES" id="HhP-aN-hwN"/>
+                                    <constraint firstItem="eYR-B4-SkP" firstAttribute="top" secondItem="Q7N-qg-M1R" secondAttribute="top" constant="20" symbolic="YES" id="YBD-KY-utg"/>
+                                    <constraint firstItem="eYR-B4-SkP" firstAttribute="centerX" secondItem="Q7N-qg-M1R" secondAttribute="centerX" id="k3J-sf-u7z"/>
+                                    <constraint firstAttribute="trailing" secondItem="eYR-B4-SkP" secondAttribute="trailing" constant="20" symbolic="YES" id="r5p-As-IMK"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Q7N-qg-M1R" secondAttribute="trailing" id="CCu-31-rwC"/>
+                            <constraint firstItem="Q7N-qg-M1R" firstAttribute="top" secondItem="4Ax-ys-bep" secondAttribute="top" id="FkJ-bW-XOo"/>
+                            <constraint firstItem="Q7N-qg-M1R" firstAttribute="leading" secondItem="4Ax-ys-bep" secondAttribute="leading" id="TMJ-me-D3w"/>
+                            <constraint firstAttribute="bottom" secondItem="Q7N-qg-M1R" secondAttribute="bottom" id="oqC-5R-UkU"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="fYu-Mr-jcv"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
-                        <outlet property="instructionsTextView" destination="aGe-Q4-Vkg" id="eIi-bk-OD3"/>
+                        <outlet property="instructionsTextView" destination="eYR-B4-SkP" id="ASI-nG-KT9"/>
+                        <outlet property="textViewHeightConstraint" destination="PZp-Cf-rVf" id="l6O-eI-xhs"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Wu2-hN-DYx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lih-5c-xOE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="43" y="-1037"/>
         </scene>
