--- a/Meditator/SingleIntervalCell.xib
+++ b/Meditator/SingleIntervalCell.xib
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SingleIntervalCell" rowHeight="207" id="x8s-Vv-kMf" customClass="IntervalCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SingleIntervalCell" id="x8s-Vv-kMf" customClass="IntervalCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="x8s-Vv-kMf" id="Yrj-js-DDY">
@@ -14,18 +15,16 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hiw-Lt-Qyf" customClass="RestrictedTouchPickerView">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="162"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="161"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="162" id="y5h-6P-68o"/>
+                            <constraint firstAttribute="height" constant="161" id="JdC-Ek-tb7"/>
                         </constraints>
                     </pickerView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mb3-b6-mG9">
                         <rect key="frame" x="276" y="0.0" width="44" height="44"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="ILb-Gw-QLy"/>
-                            <constraint firstAttribute="width" constant="44" id="N5U-3N-lZr"/>
+                            <constraint firstAttribute="height" constant="44" id="8vW-sk-smi"/>
+                            <constraint firstAttribute="width" constant="44" id="h0b-kf-368"/>
                         </constraints>
                         <state key="normal" title="reset">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -33,32 +32,31 @@
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w2b-qp-lxm">
                         <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="44" id="lsl-2s-tjm"/>
-                            <constraint firstAttribute="width" constant="44" id="wI0-GW-NRZ"/>
+                            <constraint firstAttribute="height" constant="44" id="Qsp-LU-oX5"/>
+                            <constraint firstAttribute="width" constant="44" id="zjf-8Z-ogB"/>
                         </constraints>
                         <state key="normal" title="+">
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="min" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ohk-SZ-OEC">
-                        <rect key="frame" x="182" y="72" width="28" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <rect key="frame" x="182" y="70" width="28" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Ohk-SZ-OEC" firstAttribute="centerY" secondItem="hiw-Lt-Qyf" secondAttribute="centerY" constant="1" id="7Bs-Ux-qrg"/>
-                    <constraint firstAttribute="trailing" secondItem="mb3-b6-mG9" secondAttribute="trailing" id="FJi-d4-Kuu"/>
-                    <constraint firstItem="hiw-Lt-Qyf" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="GyJ-qw-czj"/>
-                    <constraint firstItem="mb3-b6-mG9" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="Mzh-ak-AUK"/>
-                    <constraint firstItem="w2b-qp-lxm" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" id="Qmq-BC-g3s"/>
-                    <constraint firstItem="hiw-Lt-Qyf" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" id="Vos-aX-tL5"/>
-                    <constraint firstAttribute="trailing" secondItem="hiw-Lt-Qyf" secondAttribute="trailing" id="eVe-Xz-fcl"/>
-                    <constraint firstItem="Ohk-SZ-OEC" firstAttribute="centerX" secondItem="hiw-Lt-Qyf" secondAttribute="centerX" constant="36" id="qwx-2c-iU0"/>
-                    <constraint firstItem="w2b-qp-lxm" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="tMd-S3-ONO"/>
+                    <constraint firstItem="hiw-Lt-Qyf" firstAttribute="leading" secondItem="Yrj-js-DDY" secondAttribute="leading" id="28Q-xN-vdO"/>
+                    <constraint firstItem="Ohk-SZ-OEC" firstAttribute="centerY" secondItem="hiw-Lt-Qyf" secondAttribute="centerY" id="6kJ-9w-mHD"/>
+                    <constraint firstItem="mb3-b6-mG9" firstAttribute="trailing" secondItem="hiw-Lt-Qyf" secondAttribute="trailing" id="Crc-iX-FcS"/>
+                    <constraint firstItem="mb3-b6-mG9" firstAttribute="top" secondItem="hiw-Lt-Qyf" secondAttribute="top" id="Erz-ui-qhX"/>
+                    <constraint firstItem="hiw-Lt-Qyf" firstAttribute="top" secondItem="w2b-qp-lxm" secondAttribute="top" id="UBE-O5-hxV"/>
+                    <constraint firstItem="hiw-Lt-Qyf" firstAttribute="top" secondItem="Yrj-js-DDY" secondAttribute="top" id="h0t-4J-VqU"/>
+                    <constraint firstAttribute="trailing" secondItem="hiw-Lt-Qyf" secondAttribute="trailing" id="pSi-Zd-spt"/>
+                    <constraint firstItem="hiw-Lt-Qyf" firstAttribute="leading" secondItem="w2b-qp-lxm" secondAttribute="leading" id="qsl-nj-6tC"/>
+                    <constraint firstAttribute="bottom" secondItem="hiw-Lt-Qyf" secondAttribute="bottom" id="wpX-4Z-YPD"/>
+                    <constraint firstItem="Ohk-SZ-OEC" firstAttribute="centerX" secondItem="hiw-Lt-Qyf" secondAttribute="centerX" constant="36" id="xr9-tN-bps"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
